--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mdc.elementary.alsagps">
 
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -39,9 +41,12 @@
         <activity android:name="AddContactActivity" android:windowSoftInputMode="adjustResize"></activity>
         <activity android:name="ContactsScreenActivity" ></activity>
         <activity android:name="InitialScreenActivity" ></activity>
-        <activity android:name="PersonalMessageActivity" android:windowSoftInputMode="adjustResize"></activity>
+        <activity android:name="PersonalMessageActivity" android:windowSoftInputMode="adjustPan"></activity>
         <activity android:name="SettingsScreenActivity" android:windowSoftInputMode="adjustResize" ></activity>
-        <activity android:name="StartingPointActivity" android:windowSoftInputMode="adjustResize"></activity>
+        <activity android:name="StartingPointActivity" android:windowSoftInputMode="adjustPan"></activity>
     </application>
+
+
+
 
 </manifest>
