--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,10 @@
         <activity android:name="PersonalMessageActivity" android:windowSoftInputMode="adjustPan"></activity>
         <activity android:name="SettingsScreenActivity" android:windowSoftInputMode="adjustResize" ></activity>
         <activity android:name="StartingPointActivity" android:windowSoftInputMode="adjustPan"></activity>
+
+        <service
+            android:name=".AlertSystemService"
+            android:exported="false" />
     </application>
 
 
